# driving-scene-reconstruction

./: .gitignore  AGENTS.md  PROJECT_STATE.md  README.md  pyproject.toml
data/: README.md
docs/: codex_next_task_stage_h0.md  drivability_acceptance_criteria.md  drivable_reconstruction_model_strategy.md  driver_attention_and_dynamic_traffic_requirements.md  human_drivable_simulator_project.md  mvp_leave_one_camera_out.md  problem_statement.md  research_and_implementation_plan.md  stage_h2_reconstruction_renderer.md  stage_h3_stable_drivable_reconstruction_plan.md
examples/: interactive_reconstruction.py  reconstruction_renderer_smoke.py  sim_loop_smoke.py  stage_h3_browser_trial_rehearsal.py  stage_h3_corridor_sweep.py  stage_h3_drivability_preflight.py  stage_h3_logged_browser.py  stage_h3_logged_renderer_smoke.py  stage_h3_tbv_driving_adapter.py  stage_h3_tbv_world_pose_probe.py  stage_h3_trial_acceptance_check.py  stage_h3_world_browser.py  stage_h3_world_pose_probe.py
experiments/: README.md  stage1_codex_execution.md  stage1_public_resources.md  stage_h1_scene_094_reconstruction.md  stage_h3_actor_alignment_and_timing.md  stage_h3_browser_trial_acceptance_check.md  stage_h3_browser_trial_rehearsal.md  stage_h3_corridor_sweep.md  stage_h3_dataset_foundation.md  stage_h3_drivability_preflight.md  stage_h3_environment.md  stage_h3_external_multi_trajectory_resources.md  stage_h3_logged_renderer_mvp.md  stage_h3_mtgs_published_block_probe.md  stage_h3_multi_trajectory_inventory.md  stage_h3_scene_040_pilot.md  stage_h3_scene_040_smoke.md  stage_h3_tbv_surround_3d.md  (+9 more)
(+63 files in other folders)
