[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "driving-scene-reconstruction"
version = "0.2.0"
description = "Log-driven driving-scene reconstruction and simulator interfaces"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
